# LibraryMangement

./: .env.example  .gitignore  README.md  library.db  pyproject.toml
librarymanagement/: main.py
librarymanagement/controller/: librarymanager.py
librarymanagement/core/: exeptions.py  settings.py
librarymanagement/repository/: crud.py  database.py  models.py
librarymanagement/service/: books.py  schema.py
test/controller/: librarymanager_test.py
test/core/: exeptions_test.py
test/repository/: crud_test.py
test/service/: books_test.py
