[tool.poetry]
name = "librarymanagement"
version = "0.1.0"
description = ""
authors = ["tom <tom@rozekrans.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
sqlalchemy = "^2.0.38"
pydantic-settings = "^2.8.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
